log/build_2025-11-11_16-23-51/command_nodes/stdout_stderr.log
running egg_info
writing ../../build/command_nodes/command_nodes.egg-info/PKG-INFO
writing dependency_links to ../../build/command_nodes/command_nodes.egg-info/dependency_links.txt
writing entry points to ../../build/command_nodes/command_nodes.egg-info/entry_points.txt
writing requirements to ../../build/command_nodes/command_nodes.egg-info/requires.txt
writing top-level names to ../../build/command_nodes/command_nodes.egg-info/top_level.txt
reading manifest file '../../build/command_nodes/command_nodes.egg-info/SOURCES.txt'
writing manifest file '../../build/command_nodes/command_nodes.egg-info/SOURCES.txt'
running build
running build_py
copying command_nodes/command_handler.py -> /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes
running install
running install_lib
copying /root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/build/lib/command_nodes/command_handler.py -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes
byte-compiling /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py to command_handler.cpython-310.pyc
running install_data
  File "/root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py", line 68
    !/usr/bin/env python4
    ^
SyntaxError: invalid syntax

copying package.xml -> /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/share/command_nodes
running install_egg_info
removing '/root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/command_nodes/command_nodes.egg-info to /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes-0.0.0-py3.10.egg-info
running install_scripts
Installing command_handler script to /root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/command_nodes
writing list of installed files to '/root/Autonomous-Delivery-Robot-ROS2/build/command_nodes/install.log'
